--- a/pom.xml
+++ b/pom.xml
@@ -80,4 +80,12 @@
 		</plugins>
 	</build>
 
+        <distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository </name>
+			<url>http://192.168.2.124:8081/repository/maven-releases/</url>
+		</repository>
+	
+	</distributionManagement>
 </project>
